[package]
name = "public-ip"
version = "0.2.2"
authors = ["avitex <avitex@wfxlabs.com>"]
edition = "2021"
rust-version = "1.70.0"
description = "Find the public IP address of a device"
documentation = "https://docs.rs/public-ip"
homepage = "https://github.com/avitex/rust-public-ip"
repository = "https://github.com/avitex/rust-public-ip"
license = "MIT"
categories = ["network-programming"]
include = ["src/**/*", "examples/**/*", "README.md", "LICENSE", "Cargo.toml"]
keywords = ["public", "external", "ip", "async"]

[features]
default = ["all-providers", "dns-resolver", "http-resolver"]
dns-resolver = ["hickory-proto", "hickory-client", "hickory-proto/tokio-runtime"]
http-resolver = ["http", "hyper", "hyper-system-resolver", "hyper-rustls", "dns-lookup", "hyper/runtime"]

all-providers = ["google", "opendns", "ipify-org", "my-ip-io", "myip-com", "seeip-org"]

google = []
opendns = []
myip-com = []
my-ip-io = []
seeip-org = []
ipify-org = []

[dependencies]
thiserror = "1"
tracing = "0.1"
tracing-futures = { version = "0.2", features = ["futures-03"] }
pin-project-lite = "0.2"
futures-core = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }

tokio = "1"

# DNS Resolver
hickory-client = { version = "0.24", optional = true }
hickory-proto = { version = "0.24", optional = true, default-features = false }

# HTTP Resolver
http = { version = "0.2", optional = true }
dns-lookup = { version = "1", optional = true }
hyper = { version = "0.14", features = ["client", "http1"], optional = true }
hyper-system-resolver = { version = "0.5", default-features = false, optional = true }
hyper-rustls = { version = "0.23", features = ["rustls-native-certs"], optional = true }

[dev-dependencies]
tokio = { version = "~1", features = ["macros"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
