[package]
name = "public-ip"
version = "0.2.2"
authors = ["avitex <avitex@wfxlabs.com>"]
edition = "2021"
rust-version = "1.70.0"
description = "Find the public IP address of a device"
documentation = "https://docs.rs/public-ip"
homepage = "https://github.com/avitex/rust-public-ip"
repository = "https://github.com/avitex/rust-public-ip"
license = "MIT"
categories = ["network-programming"]
include = ["src/**/*", "examples/**/*", "README.md", "LICENSE", "Cargo.toml"]
keywords = ["public", "external", "ip", "async"]

[features]
default = ["all-providers", "dns-resolver", "http-resolver"]
dns-resolver = ["hickory-proto", "hickory-client", "hickory-proto/tokio-runtime"]
http-resolver = ["reqwest"]

all-providers = ["cloudflare", "google", "ipify-org", "my-ip-io", "myip-com", "opendns", "seeip-org"]

cloudflare = []
google = []
ipify-org = []
my-ip-io = []
myip-com = []
opendns = []
seeip-org = []

[dependencies]
thiserror = "1"
tracing = "0.1"
tracing-futures = { version = "0.2", features = ["futures-03"] }
pin-project-lite = "0.2"
futures-core = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }

tokio = "1"

# DNS Resolver
hickory-client = { version = "0.24", optional = true }
hickory-proto = { version = "0.24", optional = true, default-features = false }

# HTTP Resolver
reqwest = { version = "0.12.8", features = ["rustls-tls-native-roots", "json"], optional = true }
url = "2.5.2"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }

[dev-dependencies]
tokio = { version = "~1", features = ["macros"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
